Top sample grid now 4-up at all breakpoints

--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -6361,17 +6361,24 @@ hr:not(:last-child) {
   }
 }
 
-@media screen and (max-width: 33.74em) {
-  /* line 5, styleguide/scss/custom/_grids.scss */
-  body > main #overview-sample-grid {
-    margin-top: -0.25rem;
-    margin-bottom: -0.25rem;
-  }
-  /* line 383, styleguide/scss/core/_core-flexbox-grid.scss */
-  body > main #overview-sample-grid > [role="gridcell"] {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
+/* line 5, styleguide/scss/custom/_grids.scss */
+body > main #overview-sample-grid {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+  margin-left: -1.5%;
+  margin-right: -1.5%;
+}
+
+/* line 343, styleguide/scss/core/_core-flexbox-grid.scss */
+body > main #overview-sample-grid > [role="gridcell"] {
+  padding-left: 1.5%;
+  padding-right: 1.5%;
+}
+
+/* line 352, styleguide/scss/core/_core-flexbox-grid.scss */
+body > main #overview-sample-grid > [role="gridcell"] {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 @media screen and (min-width: 33.75em) {
@@ -6394,40 +6401,38 @@ hr:not(:last-child) {
   }
 }
 
-@media screen and (min-width: 33.75em) {
-  /* line 25, styleguide/scss/custom/_grids.scss */
-  body > main #overview-sample-grid [role="gridcell"] {
-    width: 25%;
-    flex-grow: 0;
-  }
+/* line 18, styleguide/scss/custom/_grids.scss */
+body > main #overview-sample-grid [role="gridcell"] {
+  width: 25%;
+  flex-grow: 0;
 }
 
-/* line 41, styleguide/scss/custom/_grids.scss */
+/* line 33, styleguide/scss/custom/_grids.scss */
 body > main > [sf-unit] article[id$="-unit"] p {
   margin-top: 0;
   margin-bottom: 0.8896rem;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 41, styleguide/scss/custom/_grids.scss */
+  /* line 33, styleguide/scss/custom/_grids.scss */
   body > main > [sf-unit] article[id$="-unit"] p {
     margin-bottom: 1.005rem;
   }
 }
 
-/* line 51, styleguide/scss/custom/_grids.scss */
+/* line 43, styleguide/scss/custom/_grids.scss */
 body > main > [sf-unit] article[id$="-unit"] p:last-child {
   margin-bottom: 0;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 56, styleguide/scss/custom/_grids.scss */
+  /* line 48, styleguide/scss/custom/_grids.scss */
   body > main > [sf-unit] article[id$="-unit"] p[role="definition"] {
     display: none;
   }
 }
 
-/* line 74, styleguide/scss/custom/_grids.scss */
+/* line 66, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(1) > section {
   color: #ffffff;
   background-color: #1187ff;
@@ -6443,7 +6448,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(1) > section 
   color: #a9e2ff;
 }
 
-/* line 82, styleguide/scss/custom/_grids.scss */
+/* line 74, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(2) > section {
   color: #ffffff;
   background-color: #6b2d5c;
@@ -6459,7 +6464,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(2) > section 
   color: #ffffff;
 }
 
-/* line 90, styleguide/scss/custom/_grids.scss */
+/* line 82, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(3) > section {
   color: #ffffff;
   background-color: #4b3f72;
@@ -6475,7 +6480,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(3) > section 
   color: #ffffff;
 }
 
-/* line 98, styleguide/scss/custom/_grids.scss */
+/* line 90, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(4) > section {
   color: #8b6868;
   background-color: #cebebe;
@@ -6491,7 +6496,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(4) > section 
   color: #8b6868;
 }
 
-/* line 106, styleguide/scss/custom/_grids.scss */
+/* line 98, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(5) > section {
   color: #ffffff;
   background-color: #b39d68;
@@ -6507,7 +6512,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(5) > section 
   color: #ffffff;
 }
 
-/* line 114, styleguide/scss/custom/_grids.scss */
+/* line 106, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(6) > section {
   color: #ffffff;
   background-color: #468847;
@@ -6523,7 +6528,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(6) > section 
   color: #ffffff;
 }
 
-/* line 122, styleguide/scss/custom/_grids.scss */
+/* line 114, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(7) > section {
   color: #ffffff;
   background-color: #de8d0f;
@@ -6539,7 +6544,7 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(7) > section 
   color: #ffffff;
 }
 
-/* line 130, styleguide/scss/custom/_grids.scss */
+/* line 122, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(8) > section {
   color: #ffffff;
   background-color: #ff6663;
@@ -6555,39 +6560,39 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"]:nth-child(8) > section 
   color: #ffffff;
 }
 
-/* line 136, styleguide/scss/custom/_grids.scss */
+/* line 128, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"] > section {
   padding-top: 0;
   padding-bottom: 0;
 }
 
-/* line 141, styleguide/scss/custom/_grids.scss */
+/* line 133, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div {
   padding: 1.0008rem;
   color: #ffffff;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 141, styleguide/scss/custom/_grids.scss */
+  /* line 133, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div {
     padding: 1.34rem;
   }
 }
 
-/* line 151, styleguide/scss/custom/_grids.scss */
+/* line 143, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div p {
   padding-top: 0.6672rem;
   line-height: 1.3;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 151, styleguide/scss/custom/_grids.scss */
+  /* line 143, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div p {
     padding-top: 0.67rem;
   }
 }
 
-/* line 162, styleguide/scss/custom/_grids.scss */
+/* line 154, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div h3 {
   color: #ffffff;
   font-size: 1.5568rem;
@@ -6599,20 +6604,20 @@ body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div h3 {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 162, styleguide/scss/custom/_grids.scss */
+  /* line 154, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"] [role="gridcell"] > section > div h3 {
     font-size: 1.675rem;
     line-height: 1.675rem;
   }
 }
 
-/* line 185, styleguide/scss/custom/_grids.scss */
+/* line 177, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"] {
   width: 100%;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 185, styleguide/scss/custom/_grids.scss */
+  /* line 177, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"] {
     width: 33.33333%;
     flex-grow: 0;
@@ -6620,7 +6625,7 @@ body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 194, styleguide/scss/custom/_grids.scss */
+  /* line 186, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"]:nth-child(3), body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"]:nth-child(4), body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"]:nth-child(5) {
     width: 16.66667%;
     flex-grow: 0;
@@ -6628,7 +6633,7 @@ body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 206, styleguide/scss/custom/_grids.scss */
+  /* line 198, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#push-grid > [role="gridcell"] {
     width: 33.33333%;
     flex-grow: 0;
@@ -6636,31 +6641,31 @@ body > main [role="grid"][id$="-grid"]#gutterless-grid > [role="gridcell"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 220, styleguide/scss/custom/_grids.scss */
+  /* line 212, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutters-push-grid > [role="gridcell"]:nth-child(1), body > main [role="grid"][id$="-grid"]#push-grid > [role="gridcell"]:nth-child(1) {
     left: 16.66667%;
   }
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 227, styleguide/scss/custom/_grids.scss */
+  /* line 219, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutters-push-grid > [role="gridcell"]:nth-child(2), body > main [role="grid"][id$="-grid"]#push-grid > [role="gridcell"]:nth-child(2) {
     left: 16.66667%;
   }
 }
 
-/* line 238, styleguide/scss/custom/_grids.scss */
+/* line 230, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"]#equal-heights-centered-grid section {
   justify-content: flex-start;
 }
 
-/* line 246, styleguide/scss/custom/_grids.scss */
+/* line 238, styleguide/scss/custom/_grids.scss */
 body > main [role="grid"][id$="-grid"]#fully-centered-grid h3, body > main [role="grid"][id$="-grid"]#fully-centered-grid p {
   text-align: center;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 255, styleguide/scss/custom/_grids.scss */
+  /* line 247, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutters-varied-grid > [role="gridcell"]:nth-child(4) {
     width: 50%;
     flex-grow: 0;
@@ -6668,7 +6673,7 @@ body > main [role="grid"][id$="-grid"]#fully-centered-grid h3, body > main [role
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 263, styleguide/scss/custom/_grids.scss */
+  /* line 255, styleguide/scss/custom/_grids.scss */
   body > main [role="grid"][id$="-grid"]#gutters-varied-grid > [role="gridcell"]:nth-child(5), body > main [role="grid"][id$="-grid"]#gutters-varied-grid > [role="gridcell"]:nth-child(6) {
     width: 25%;
     flex-grow: 0;
