--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -4,10 +4,8 @@ body {
 
         #overview-sample-grid {
 
-            // margin-bottom: 1.5rem;
-
             @include sf-set-gutter (
-                $upto: tablet-portrait,
+                $gutter: 3%,
                 $row-gutter: 0.5rem
             );
 
@@ -17,15 +15,9 @@ body {
                 $row-gutter: 1.5rem
             );
 
-            // @include sf-set-width (
-            //     $upto: tablet-portrait,
-            //     $width: one-quarter
-            // );
-
             [role="gridcell"] {
 
                 @include sf-set-width (
-                    $from: tablet-portrait,
                     $width: one-quarter
                 );
             }
