--- a/styleguide/scss/core/_core-media-queries.scss
+++ b/styleguide/scss/core/_core-media-queries.scss
@@ -42,7 +42,7 @@
 
     @if map-has-key($breakpoints, $name) {
 
-        @return map-get($breakpoints, $name);
+        @return nth(map-get($breakpoints, $name), 1);
 
     } @else {
 
@@ -117,12 +117,12 @@
 
     $skip: false;
 
-    @if ($from != false and map-get($media-breakpoints, $from) == false)
+    @if ($from != false and nth(map-get($media-breakpoints, $from), 1) == false)
     {
         $skip: true;
     }
 
-    @if ($upto != false and map-get($media-breakpoints, $upto) == false)
+    @if ($upto != false and nth(map-get($media-breakpoints, $upto), 1) == false)
     {
         $skip: true;
     }
