--- a/styleguide/scss/core/_core-helpers.scss
+++ b/styleguide/scss/core/_core-helpers.scss
@@ -221,13 +221,12 @@
 
     @each $unit in $units {
     
-        @if str-index($stringval, $unit) {
+        @if sf-str-endswith($stringval, $unit) {
 
             $result: $unit;
         }    
     }
 
-    //@debug $stringval + " --- " + $result;
     @return $result;
 }
 
